--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,20 @@ img {
   display: block;
   max-width: 100%;
 }
+body {
+  background: rgb(126, 119, 119);
+}
+section,
+main {
+  margin: 40px 0 0 0;
+}
+.title {
+  font-size: 2rem;
+  font-family: "Zen Dots", cursive;
+  text-decoration: underline;
+  text-align: center;
+  margin: 40px auto;
+}
 .header {
   background: #000;
   display: flex;
@@ -17,6 +31,7 @@ img {
   align-items: center;
   padding: 20px;
 }
+
 .logo {
   font-family: "DotGothic16", sans-serif;
   font-size: 2.5rem;
@@ -43,6 +58,27 @@ img {
   height: 35rem;
   width: 100%;
 }
+.painel p {
+  color: #fff;
+  font-size: 1.1rem;
+  margin-bottom: 20px;
+  font-family: "Zen Dots", cursive;
+  line-height: 1.9;
+}
+.painel button {
+  padding: 10px;
+  font-size: 1rem;
+  font-family: "Zen Dots", cursive;
+  cursor: pointer;
+  background: #fff;
+  border: none;
+  border-radius: 4px;
+}
+.painel button:hover {
+  background: #482e62;
+  transition: 1.3s;
+  border: 1px solid #fff;
+}
 .painel > div {
   flex: 1 1 200px;
   margin: 10px;
@@ -53,7 +89,320 @@ img {
   max-width: 1200px;
   margin: 0 auto;
 }
+.boxgame p {
+  margin-top: 10px;
+  color: #fff;
+  font-family: "Zen Dots", cursive;
+}
+.boxgame img {
+  border-radius: 2px;
+}
 .boxgame > div {
   flex: 1 1 200px;
   margin: 10px;
+}
+.aboutgame {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  max-width: 1200px;
+  padding: 10px;
+  grid-gap: 20px;
+  margin: 0 auto;
+}
+.gameitem:nth-child(1) {
+  grid-row: 1/3;
+}
+.gameitem {
+  display: grid;
+}
+.gameitem img {
+  grid-column: 1;
+  grid-row: 1/3;
+  align-self: end;
+}
+.gameitem p {
+  font-family: "Zen Dots", cursive;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 10px;
+  color: #fff;
+  grid-column: 1;
+  grid-row: 2/3;
+  align-self: end;
+}
+.legenda-modal {
+  color: #fff;
+  cursor: pointer;
+}
+/*---------------*/
+
+.cadastro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Zen Dots", cursive;
+}
+.cadastro button {
+  border-radius: 20px;
+  border: 1px solid #000;
+  background-color: #000;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  margin-top: 10px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+  cursor: pointer;
+}
+
+.cadastro button:active {
+  transform: scale(0.95);
+}
+
+.cadastro button:focus {
+  outline: none;
+}
+
+.cadastro button.ghost {
+  background-color: transparent;
+  border-color: #ffffff;
+}
+
+.cadastro form {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.cadastro input {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+}
+
+.cadastro .container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 1200px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.cadastro .form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.cadastro .sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.cadastro .container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.cadastro .sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.cadastro .container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  50%,
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.cadastro .overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.cadastro .container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+}
+
+.cadastro .overlay {
+  background: #000;
+  background: -webkit-linear-gradient(to right, rgb(126, 119, 119), #000);
+  background: linear-gradient(to right, rgb(126, 119, 119), #000);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #ffffff;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.cadastro .container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.cadastro .overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.cadastro .overlay-left {
+  transform: translateX(-20%);
+}
+
+.cadastro .container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.cadastro .overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.cadastro .container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.cadastro .social-container {
+  margin: 20px 0;
+}
+
+.cadastro .social-container a {
+  border: 1px solid #dddddd;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  height: 40px;
+  width: 40px;
+}
+
+.contato {
+  font-family: "Zen Dots", cursive;
+  color: #fff;
+  background: url(../img/telainicial.png);
+  background: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 300px;
+}
+.contato h2 {
+  font-size: 4rem;
+  font-family: "DotGothic16", sans-serif;
+}
+.contato li {
+  font-size: 1.2rem;
+}
+.contato div {
+  margin: 0 50px;
+}
+/*modal*/
+.modal-container {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2000;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.modal-container.openModal {
+  display: flex;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  width: 60%;
+  min-width: 300px;
+  padding: 10px;
+  border-radius: 4px;
+  border: 10px solid #000;
+  position: relative;
+}
+@keyframes modal {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -60px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.openModal .modal {
+  animation: modal 0.3s;
+}
+.close {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 4px solid #000;
+  cursor: pointer;
+}
+
+/*media*/
+
+@media (max-width: 768px) {
+  .painel p {
+    font-size: 0.9rem;
+  }
 }
