--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,30 @@ main {
   margin: 10px;
 }
 .aboutgame {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0 auto;
+}
+.gameitem {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.gameitem p {
+  font-family: "Zen Dots", cursive;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 10px;
+  color: #fff;
+  align-self: end;
+  width: 600px;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+}
+/*
+.aboutgame {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   max-width: 1200px;
@@ -109,15 +133,18 @@ main {
   grid-gap: 20px;
   margin: 0 auto;
 }
+
 .gameitem:nth-child(1) {
-  grid-row: 1/3;
+  grid-row: 1/4;
 }
 .gameitem {
   display: grid;
 }
 .gameitem img {
+  width: 200px;
+  height: 200px;
   grid-column: 1;
-  grid-row: 1/3;
+  grid-row: 1/4;
   align-self: end;
 }
 .gameitem p {
@@ -129,10 +156,15 @@ main {
   grid-row: 2/3;
   align-self: end;
 }
-.legenda-modal {
+*/
+.legenda-modal,
+.legenda-modal1,
+.legenda-modal2,
+.legenda-modal3 {
   color: #fff;
   cursor: pointer;
 }
+
 /*---------------*/
 
 .cadastro {
@@ -325,29 +357,29 @@ main {
   height: 40px;
   width: 40px;
 }
-
 .contato {
-  font-family: "Zen Dots", cursive;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   color: #fff;
   background: url(../img/telainicial.png);
   background: cover;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 300px;
-}
-.contato h2 {
-  font-size: 4rem;
-  font-family: "DotGothic16", sans-serif;
-}
-.contato li {
-  font-size: 1.2rem;
+  height: 250px;
 }
 .contato div {
-  margin: 0 50px;
+  display: flex;
+}
+.contato h2 {
+  font-family: "DotGothic16", sans-serif;
+  font-size: 4rem;
+}
+.contato ul li {
+  font-family: "Zen Dots", cursive;
+  font-size: 1.5rem;
 }
 /*modal*/
 .modal-container {
+  font-family: "Zen Dots", cursive;
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -374,6 +406,10 @@ main {
   border-radius: 4px;
   border: 10px solid #000;
   position: relative;
+}
+.modal img {
+  width: 200px;
+  height: 200px;
 }
 @keyframes modal {
   from {
@@ -404,5 +440,11 @@ main {
 @media (max-width: 768px) {
   .painel p {
     font-size: 0.9rem;
+  }
+  .gameitem p {
+    width: 200px;
+  }
+  .contato ul li {
+    font-size: 0.7rem;
   }
 }
