--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,100 @@ section,
 main {
   margin: 40px 0 0 0;
 }
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: #000;
+  font-family: "Zen Dots", cursive;
+}
+.logo {
+  color: #fff;
+  font-family: "DotGothic16", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 20px;
+}
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+}
+.nav-links a {
+  color: #fff;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
+  margin-left: 10px;
+}
+.burger {
+  display: none;
+  cursor: pointer;
+}
+.burger div {
+  width: 25px;
+  height: 3px;
+  background: #fff;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .nav-links li {
+    opacity: 0;
+  }
+  .burger {
+    display: block;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .line2 {
+  opacity: 0;
+}
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
 .title {
   font-size: 2rem;
   font-family: "Zen Dots", cursive;
@@ -23,6 +117,7 @@ main {
   text-align: center;
   margin: 40px auto;
 }
+/*
 .header {
   background: #000;
   display: flex;
@@ -48,6 +143,7 @@ main {
 .menu li {
   margin-left: 10px;
 }
+*/
 .painel {
   display: flex;
   flex-wrap: wrap;
