atualizaçao de secao

--- a/css/style.css
+++ b/css/style.css
@@ -220,39 +220,7 @@ nav {
   padding: 20px;
   text-align: center;
 }
-/*
-.aboutgame {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  max-width: 1200px;
-  padding: 10px;
-  grid-gap: 20px;
-  margin: 0 auto;
-}
 
-.gameitem:nth-child(1) {
-  grid-row: 1/4;
-}
-.gameitem {
-  display: grid;
-}
-.gameitem img {
-  width: 200px;
-  height: 200px;
-  grid-column: 1;
-  grid-row: 1/4;
-  align-self: end;
-}
-.gameitem p {
-  font-family: "Zen Dots", cursive;
-  background: rgba(0, 0, 0, 0.9);
-  padding: 10px;
-  color: #fff;
-  grid-column: 1;
-  grid-row: 2/3;
-  align-self: end;
-}
-*/
 .legenda-modal,
 .legenda-modal1,
 .legenda-modal2,
@@ -506,6 +474,7 @@ nav {
 .modal img {
   width: 200px;
   height: 200px;
+  margin-right: 20px;
 }
 @keyframes modal {
   from {
@@ -542,5 +511,11 @@ nav {
   }
   .contato ul li {
     font-size: 0.7rem;
+  }
+}
+
+@media (max-width: 439px) {
+  main.painel div p {
+    display: none;
   }
 }
